feat: Stub files builder (#326)
* small refactorings

* additional small refactorings

* add stub generation functionality

* - refactoring to not use static class methods anymore
- add and update test cases
- add builder for module stub content

* small visibility changes

* remove constructor

* update folder structure

* update default value formatting

* fix: stub folder structure

* fix: most syntax errors caused by default values

Co-authored-by: Lars Reimann <mail@larsreimann.com>